2010-02-24  Stephen White  <senorblanco@chromium.org>

Reviewed by Darin Adler.

        This CL implements a simple ad-hoc parser for CSS rgb() values.
        If it fails, it returns false and the normal lex/yacc parser will
        be invoked.

        https://bugs.webkit.org/show_bug.cgi?id=35362

        Covered by fast/canvas/canvas-bg.html, fast/canvas/canvas-bg-zoom.html,
        and many more.

        * css/CSSParser.cpp:
        (WebCore::parseInt):
        (WebCore::CSSParser::parseColor):


Canonical link: https://commits.webkit.org/46609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55308 268f45cc-cd09-0410-ab3c-d52691b4dbfc